[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/dialog_box/dialog_box_sem_personagem.png" type="Texture" id=1]
[ext_resource path="res://scripts/dialog/input_box.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/gamer.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/font2.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 480, 90 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 8
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="input_box" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.533333 )
margin_right = 480.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 1 )

[node name="input" type="LineEdit" parent="."]
modulate = Color( 0.870588, 0.870588, 0.870588, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -11.5
margin_right = 75.0
margin_bottom = 11.5
mouse_filter = 2
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
max_length = 9
caret_blink = true
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="input"]
margin_left = 27.0
margin_top = -12.0
margin_right = 130.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "QUAL O NOME DELE?"

[node name="mensagem" type="Label" parent="."]
margin_right = 480.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
text = "nossos nomes :)"
align = 1
valign = 1

[node name="timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="text_changed" from="input" to="." method="_on_input_text_changed"]
[connection signal="text_entered" from="input" to="." method="_on_input_text_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
